18 September 2008: Wouter
	- fixup error in time calculation.
	- munin plugin improvements.
	- nicer abbreviations for high query types values (ixfr, axfr, any...)
	- documented the statistics output in unbound-control man page.

17 September 2008: Wouter
	- locking for threadsafe bogus rrset counter.
	- ldns trunk no longer exports b32 functions, provide compat.
	- ldns tarball updated.
	- testcode/ldns-testpkts.c const fixups.
	- fixed rcode stat printout.
	- munin plugin in contrib.
	- stats always printout uptime, because stats plugins need it.

16 September 2008: Wouter
	- extended-statistics: yesno config option.
	- unwanted replies spoof nearmiss detector.
	- iana portlist updated.

15 September 2008: Wouter
	- working start, stop, reload commands for unbound-control.
	- test for unbound-control working; better exit value for control.
	- verbosity control via unbound-control.
	- unbound-control stats.

12 September 2008: Wouter
	- removed browser control mentions. Proto speccy.

11 September 2008: Wouter
	- set nonblocking on new TCP streams, because linux does not inherit
	  the socket options to the accepted socket.
	- fix TCP timeouts.
	- SSL protected connection between server and unbound-control.

10 September 2008: Wouter
	- remove memleak in privacy addresses on reloads and quits.
	- remote control work.

9 September 2008: Wouter
	- smallapp/unbound-control-setup.sh script to set up certificates.

4 September 2008: Wouter
	- scrubber scrubs away private addresses.
	- test for private addresses. man page entry.
	- code refactored for name and address tree lookups.

3 September 2008: Wouter
	- options for 'DNS Rebinding' protection: private-address and
	  private-domain.
	- dnstree for reuse of routines that help with domain, addr lookups.
	- private-address and private-domain config option read, stored.

2 September 2008: Wouter
	- DoS protection features. Queries are jostled out to make room.
	- testbound can pass time, increasing the internal timer.